<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_f_junior_base_station</name>
  <version>1.0.0</version>
  <description>Base station of Wall-F Junior</description>
  <maintainer email="i.lin@mail.utoronto.ca">Yifan Lin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>qtbase5-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>slider_publisher</exec_depend>
  <exec_depend>rviz_2d_overlay_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
