<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_f_junior_pico</name>
  <version>0.1.0</version>
  <description>Raspberry Pi Pico firmware for WALL-F Junior</description>
  <maintainer email="i.lin@mail.utoronto.ca">Yifan Lin</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
